[package]
name = "uncompute"
version = "0.1.0"
authors = ["Marisa Kirisame <lolisa@marisa.moe>"]
edition = "2018"
description = "Uncompute values to save memory"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either="1.6.1"